--- a/front-end/educapp/package.json
+++ b/front-end/educapp/package.json
@@ -20,10 +20,8 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
-    "npm": "^6.3.0",
-    "react": "^16.4.2",
-    "react-native": "^0.56.0",
-    "react-native-cli": "^2.0.1",
+    "react": "16.3.1",
+    "react-native": "~0.55.2",
     "react-navigation": "^2.11.2"
   }
 }
