--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.2",
     "isomorphic-fetch": "^2.2.1",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "node-rest-client": "^3.1.0"
   }
 }
